# ros_pointpillars

./: CMakeLists.txt  main.cpp  package.xml
include/: point_pillars_ros.h
src/: lidar_point_pillars_node.cpp  point_pillars_ros.cpp  visualize_detected_objects.cpp
tool/: params.h
